--- a/experiments/4-gen-doc/yaml/srv-user.yaml
+++ b/experiments/4-gen-doc/yaml/srv-user.yaml
@@ -6,7 +6,30 @@ spec:
   template:
     metadata:
       annotations:
+        autoscaling.knative.dev/window: "60s"
+        autoscaling.knative.dev/stable-window: "60s"
+        
+        autoscaling.knative.dev/initial-scale: "0"
+        autoscaling.knative.dev/activation-scale: "5"
+        
         autoscaling.knative.dev/min-scale: "0"
+        autoscaling.knative.dev/max-scale: "3"
+        
+        autoscaling.knative.dev/panic-window-percentage: "10.0"
+        
+        autoscaling.knative.dev/activation-scale: "5"
+        
+        autoscaling.knative.dev/panic-threshold-percentage: "200.0"
+
+        autoscaling.knative.dev/scale-down-delay: "0s"
+
+        autoscaling.knative.dev/target: "150"
+        autoscaling.knative.dev/metric: "rps"
+
+        autoscaling.knative.dev/target: "200"
+
+        # autoscaling.knative.dev/metric: "concurrency"
+        # autoscaling.knative.dev/target-utilization-percentage: "70" 
     spec:
       containerConcurrency: 20
       containers:
